modified:   Index.html 	modified:   blog.html 	modified:   css/format.css 	modified:   css/styles.css 	modified:   data/knowledge_sharing.json 	renamed:    images/reactnantive.jpeg -> images/reactnative.jpeg 	new file:   js/knowledge_sharing.js 	modified:   knowledge_sharing.html

--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="./knowledge_sharing.html">
+                                <a href="./knowledge_sharing.html" id="knowledgeSharingLink">
                                     <img src="./images/knowledge_white.png" alt="knowledge" class="icon icon-default">
                                     <img src="./images/knowledge_black.png" alt="knowledge" class="icon icon-active">
                                     Knowledge sharing
@@ -139,7 +139,9 @@
                               </div>
                         </div>
                   </section>
+                  <div id="data-container">
 
+                  </div>
             </main>
       </div>
       <script src="/js/functions.js">
