--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
                   <nav>
                         <ul>
                             <li >
-                                <a href="./index.html">
+                                <a href="./Index.html">
                                     <img src="./images/resume_white.png" alt="resume" class="icon icon-default">
                                     <img src="./images/resume_black.png" alt="resume" class="icon icon-active">
                                     Application Profile
