modified:   Index.html 	modified:   blog.html 	modified:   images/Avatar.png 	modified:   knowledge_sharing.html

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
       <div class="container">
             <header>
-                  <img src="./images/Avatar.png" alt="Avatar" class="avatar">
+                  <img src="./images/avatar.png" alt="Avatar" class="avatar">
                   <p  class="name">Van-Nam Tran</p>
                   <p>STUDENT OF UNIVERSITY OF ECONOMICS AND LAW</p>
                   <p>Majors: Managerment Information system</p>
@@ -52,7 +52,7 @@
                   <section class="about-me">
                         <div class="avatar-box">
                               <div class="avatar-box-name">
-                                    <img style="width: 150px; " src="./images/Avatar.png" alt="avatar" class="my-avatar">
+                                    <img style="width: 150px; " src="./images/avatar.png" alt="avatar" class="my-avatar">
                                     <div style="text-align: center;">
                                           <h1>Trần Văn Nam</H1>
                                           <p >STUDENT OF UNIVERSITY OF  </br>ECONOMICS AND LAW</p>
