--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
       <div class="container">
             <header>
-                  <img src="./images/Avatar.png" alt="Avatar" class="avatar">
+                  <img src="./images/avatar.png" alt="Avatar" class="avatar">
                   <p  class="name">Van-Nam Tran</p>
                   <p>STUDENT OF UNIVERSITY OF ECONOMICS AND LAW</p>
                   <p>Majors: Managerment Information system</p>
