modified:   Index.html 	modified:   blog.html 	modified:   css/format.css 	modified:   css/styles.css 	new file:   images/bg.png 	renamed:    images/image_processing20220121-23217-n5awbt.png -> images/illus-mobile-app.png 	modified:   knowledge_sharing.html

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 <body>
       <div class="container">
-            <header>
+            <header style="background-image: url(images/bg.png); background-size: 60px 60px;">
                   <img src="./images/avatar.png" alt="Avatar" class="avatar">
                   <p class="name">Van-Nam Tran</p>
                   <p>STUDENT OF UNIVERSITY OF ECONOMICS AND LAW</p>
@@ -72,7 +72,7 @@
 
                         </div>
                         <div class="contact-box">
-                              <p>Contact</p>
+                              <p class="contact-box-title">Contact</p>
                               <hr>
                               <br>
                               <div class="contact-box-info">
@@ -135,23 +135,53 @@
                                     </div>
                               </div>
                               <div class="my-projects">
-                                    <div class="my-project project-web" data-link="A7KbTRqA-fk?si=70fMYRsKQHdCNGCC">
-
+                                    <div class="my-project project-web" data-link="A7KbTRqA-fk?si=70fMYRsKQHdCNGCC"
+                                    style="background-image: url(images/illus-mobile-app.png);">
+                                          <div class="overlay2"></div>
+                                          <div class="my-project-context">
+                                                <br>
+                                                <p>Website</p> <br> 
+                                                <ul>
+                                                <li>HTML, CSS, TJ</li>
+                                                <li>Angular</li>
+                                                <li>Notejs</li>
+                                                <li>MongoDB</li>
+                                          </ul></ul>
+                                          </div>
                                     </div>
-                                    <div class="my-project project-app" data-link="3qWg5uTYeuU?si=-EqXAdly_Eo3lB44">
+                                    <div class="my-project project-app" data-link="3qWg5uTYeuU?si=-EqXAdly_Eo3lB44"
+                                          style="background-image: url(images/illus-mobile-app.png);">
+                                          <div class="overlay2"></div>
+                                          <div class="my-project-context">
+                                                <br>
+                                                <p>Android app</p> <br> 
+                                                <ul>
+                                                <li>Android studio</li>
+                                                <li>firebase</li>
+                                                <li>Java</li></ul></ul>
+                                          </div>
+                                    </div>
+                                    <div class="my-project project-destop" data-link=""
+                                    style="background-image: url(images/illus-mobile-app.png);">
+                                          <div class="overlay2"></div>
+                                          <div class="my-project-context">
+                                                <br>
+                                                <p>Android app</p> <br> 
+                                                <ul>
+                                                <li>Android studio</li>
+                                                <li>firebase</li>
+                                                <li>Java</li></ul></ul>
+                                          </div>
+
                                           
-                                    </div>
-                                    <div class="my-project project-destop" data-link="">
-
                                     </div>
                                     <div class="youtube-player-overlay">
                                           <div class="my-project-video">
-                                                <iframe 
-                                                src="https://www.youtube.com/embed/"
-                                                title="YouTube video player" frameborder="0"
-                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                                referrerpolicy="strict-origin-when-cross-origin"
-                                                allowfullscreen></iframe>
+                                                <iframe src="https://www.youtube.com/embed/"
+                                                      title="YouTube video player" frameborder="0"
+                                                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                                      referrerpolicy="strict-origin-when-cross-origin"
+                                                      allowfullscreen></iframe>
                                           </div>
                                     </div>
                               </div>
