--- a/knowledge_sharing.html
+++ b/knowledge_sharing.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <header>
+        <header style="background-image: url(images/bg.png); background-size: 60px 60px;">
             <img src="./images/avatar.png" alt="Avatar" class="avatar">
             <p class="name">Van-Nam Tran</p>
             <p>STUDENT OF UNIVERSITY OF ECONOMICS AND LAW</p>
