--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
       <div class="container">
-            <header>
+            <header style="background-image: url(images/bg.png); background-size: 60px 60px;">
                   <img src="./images/avatar.png" alt="Avatar" class="avatar">
                   <p  class="name">Van-Nam Tran</p>
                   <p>STUDENT OF UNIVERSITY OF ECONOMICS AND LAW</p>
