--- a/blog.html
+++ b/blog.html
@@ -44,6 +44,7 @@
                         </ul>
                     </nav>   
             </header>
+            <button id="scrollToTopBtn" title="Go to top">Top</button>
             <main>
                   <h2>My Blog</h2>
                   <hr>
