--- a/knowledge_sharing.html
+++ b/knowledge_sharing.html
@@ -46,6 +46,7 @@
                 </ul>
             </nav>
         </header>
+        <button id="scrollToTopBtn" title="Go to top">Top</button>
         <main>
             <h2>Knowledge Sharing</h2>
             <hr>
@@ -72,7 +73,41 @@
 
     <script src="/js/functions.js">
     </script>
-    <script src="/js/knowledge_sharing.js">
+    <!-- <script src="/js/knowledge_sharing.js">
+    </script> -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            fetch('./data/knowledge_sharing.json')
+                .then(response => response.json())
+                .then(data => {
+                    const container = document.getElementById('data-container');
+                    const template = document.getElementById('data-template');
+
+                    data.forEach(item => {
+                        const clone = document.importNode(template.content, true);
+
+                        // Set background image
+                        clone.querySelector('.background-image img').src = `images/${item.image}`;
+                        // Set name
+                        clone.querySelector('.topic-name').textContent = item.name;
+                        // Set fields
+                        clone.querySelector('.fields').textContent = item.field.join(', ');
+
+                        container.appendChild(clone);
+                    });
+                })
+                .catch(error => console.error('Error fetching data:', error));
+        });
+        var scrollToTopBtn = document.getElementById("scrollToTopBtn");
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                scrollToTopBtn.style.display = "block";
+            } else {
+                scrollToTopBtn.style.display = "none";
+            }
+        }
     </script>
 </body>
 
