modified:   Index.html 	modified:   blog.html 	modified:   css/styles.css 	new file:   images/desktopapp.jpeg 	new file:   images/lock.png 	new file:   images/websiteill.jpeg 	modified:   knowledge_sharing.html

--- a/Index.html
+++ b/Index.html
@@ -53,13 +53,13 @@
             <button id="scrollToTopBtn" title="Go to top">Top</button>
             <button id="menu" title="Menu"><img src="images/menu.png" alt="" style="width: 25px;"></button>
             <main>
-                  <h2>Application Profile</h2>
+                  <h2> Profile</h2>
                   <hr>
                   <br>
                   <section class="about-me">
                         <div class="avatar-box">
                               <div class="avatar-box-name">
-                                    <img style="width: 150px; " src="./images/avatar.png" alt="avatar"
+                                    <img style="width: 140px;height: 140px; " src="./images/avatar.png" alt="avatar"
                                           class="my-avatar">
                                     <div style="text-align: center;">
                                           <h1>Trần Văn Nam</H1>
@@ -68,9 +68,14 @@
                                     </div>
                               </div>
                               <div class="about-me-info">
-                                    <h2>About me</h2>
-                                    <span>DoB: 03/08/2002</span>
-                                    <p>Iam looking for a job</p>
+                                    <h2>Career Objective</h2>
+
+                                    <p style="text-align: justify; padding: 0px 32px 16px 16px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; color: #333; font-weight: normal;">
+                                          "I am currently looking for an internship opportunity in the technology
+                                          sector, where I can apply my knowledge and practical experience
+                                          gained through university projects. With a strong desire to become a software
+                                          developer, I am eager to contribute to projects, collaborate effectively
+                                          within teams, and help the organization achieve its goals."</p>
                               </div>
 
                         </div>
@@ -138,14 +143,14 @@
                                     </div>
                               </div>
                               <div class="my-projects">
-                                    <div class="my-project project-web" data-link="A7KbTRqA-fk?si=70fMYRsKQHdCNGCC"
-                                          style="background-image: url(images/illus-mobile-app.png);">
+                                    <div class="my-project project-web" data-link=""
+                                          style="background-image: url(images/websiteill.jpeg);">
                                           <div class="overlay2"></div>
                                           <div class="my-project-context">
                                                 <br>
                                                 <p>Website</p> <br>
                                                 <ul>
-                                                      <li>HTML, CSS, Ts</li>
+                                                      <li>HTML, CSS, TypeScript</li>
                                                       <li>Angular</li>
                                                       <li>Notejs</li>
                                                       <li>MongoDB</li>
@@ -161,22 +166,21 @@
                                                 <p>Android app</p> <br>
                                                 <ul>
                                                       <li>Android studio</li>
-                                                      <li>firebase</li>
+                                                      <li>Firebase</li>
                                                       <li>Java</li>
                                                 </ul>
                                                 </ul>
                                           </div>
                                     </div>
                                     <div class="my-project project-destop" data-link=""
-                                          style="background-image: url(images/illus-mobile-app.png);">
+                                          style="background-image: url(images/desktopapp.jpeg);">
                                           <div class="overlay2"></div>
                                           <div class="my-project-context">
                                                 <br>
-                                                <p>Android app</p> <br>
+                                                <p>Desktop appication</p> <br>
                                                 <ul>
-                                                      <li>Android studio</li>
-                                                      <li>firebase</li>
-                                                      <li>Java</li>
+                                                      <li>Python</li>
+                                                      <li>SSMS</li>
                                                 </ul>
                                                 </ul>
                                           </div>
