--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,9 @@
                         </ul>
                     </nav>   
             </header>
+            <div id="overlay"><span id="closeMenu">&times;</span></div>
             <button id="scrollToTopBtn" title="Go to top">Top</button>
+            <button id="menu" title="Menu"><img src="images/menu.png" alt="" style="width: 25px;"></button>
             <main>
                   <h2>My Blog</h2>
                   <hr>
@@ -58,6 +60,47 @@
             </main>
       </div>
       
-      <script src="./js/functions.js"></script>
+      <!-- <script src="./js/functions.js"></script> -->
+       <script>
+                // scroll to top button
+                var scrollToTopBtn = document.getElementById("scrollToTopBtn");
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                scrollToTopBtn.style.display = "block";
+            } else {
+                scrollToTopBtn.style.display = "none";
+            }
+        }
+
+        scrollToTopBtn.onclick = function () {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+        // Menu
+        var menuBtn = document.getElementById("menu");
+        var header = document.getElementsByTagName("header")[0];
+        var overlay = document.getElementById("overlay");
+        var closeMenu = document.getElementById("closeMenu");
+        menuBtn.onclick = function () {
+            header.classList.toggle("show");
+            overlay.classList.toggle("show");
+            closeMenu.classList.toggle("show");
+        };
+        closeMenu.onclick = function () {
+            header.classList.remove("show");
+            overlay.classList.remove("show");
+            closeMenu.classList.remove("show");
+
+        };
+        window.onresize = function () {
+            if (window.innerWidth > 500) {
+                header.classList.remove("show");
+                overlay.classList.remove("show");
+                closeMenu.classList.remove("show");
+            }
+        };
+       </script>
 </body>
 </html>
