modified:   Index.html 	modified:   css/styles.css

--- a/Index.html
+++ b/Index.html
@@ -105,12 +105,11 @@
                               <h1>Knowledge</h1>
                               <hr>
                               <ul>
-                                    <li><b>Front-end:</b> HTML, CSS, Javascript, Typescript</li>
+                                    <li><b>Front-end:</b> HTML, CSS, JavaScript, TypeScript</li>
                                     <li><b>Back-end:</b> Python, Java, Javascript</li>
-                                    <li><b>Database:</b> MongoDB, Microsoft SQL Server, Fire Base</li>
+                                    <li><b>Database:</b> MongoDB, Microsoft SQL Server, FireBase</li>
                                     <li> </li>
                                     <li><b>Automation test:</b> Selenium, Python</li>
-                                    <li><b>GitHub</b></li>
                                     <li><b>Business Analytics</b></li>
                                     <li><b>Business Intelligence</b></li>
                                     <li><b>SAP ERP</b></li>
@@ -123,9 +122,9 @@
                                           <h3>QT-Data Inc, Technology Internship</h3>
                                           <span>03/2023 - 06/2023</span>
                                           <ul>
-                                                <li>Crawl data</li>
-                                                <li>Write automation tool</li>
-                                                <li>Update working system</li>
+                                                <li><b>Crawled data:</b> Developed scripts and tools for web scraping and data extraction.</li>
+                                                <li><b>Developed automation tools:</b> Created and maintained tools to automate repetitive tasks and improve workflow efficiency.</li>
+                                                <li><b>Updated working systems:</b> Updated code to display work notifications and ensure accurate information is presented to teams.</li>
                                           </ul>
                                     </div>
                                     <div class="certificate-image">
