--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="author" content="TranVanNam">
       <link rel="stylesheet" href="css/styles.css">
+      <link rel="icon" href="images/avatarmini.png" type="image/png">
       <title>TranVanNam</title>
 </head>
 
