modified:   index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <li><b>Back-end:</b> Python, Java, Javascript</li>
                                     <li><b>Database:</b> MongoDB, Microsoft SQL Server, FireBase</li>
                                     <li> </li>
-                                    <li><b>Automation test:</b> Selenium, Python</li>
+                                    <li><b>Automation:</b> Selenium, Python</li>
                                     <li><b>Business Analytics</b></li>
                                     <li><b>Business Intelligence</b></li>
                                     <li><b>SAP ERP</b></li>
