modified:   blog.html 	modified:   index.html 	modified:   knowledge_sharing.html

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
                                 <a href="./index.html">
                                     <img src="./images/resume_white.png" alt="resume" class="icon icon-default">
                                     <img src="./images/resume_black.png" alt="resume" class="icon icon-active">
-                                    Application Profile
+                                    My Profile
                                 </a>
                             </li>
                             <li>
