--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                     <a href="#">
                                           <img src="./images/resume_white.png" alt="resume" class="icon icon-default">
                                           <img src="./images/resume_black.png" alt="resume" class="icon icon-active">
-                                          Application Profile
+                                          My Profile
                                     </a>
                               </li>
                               <li>
@@ -70,13 +70,13 @@
                               </div>
                               <div class="about-me-info">
                                     <h2>Career Objective</h2>
-
+                                    
                                     <p style="text-align: justify; padding: 0px 32px 16px 16px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; color: #333; font-weight: normal;">
                                           "I am currently looking for an internship opportunity in the technology
                                           sector, where I can apply my knowledge and practical experience
                                           gained through university projects. With a strong desire to become a software
                                           developer, I am eager to contribute to projects, collaborate effectively
-                                          within teams, and help the organization achieve its goals."</p>
+                                          within teams, and help the organization achieve its goals." <i>---2024</i></p>
                               </div>
 
                         </div>
@@ -177,10 +177,10 @@
                                           <div class="overlay2"></div>
                                           <div class="my-project-context">
                                                 <br>
-                                                <p>Desktop appication</p> <br>
+                                                <p>Desktop app</p> <br>
                                                 <ul>
                                                       <li>Python</li>
-                                                      <li>SSMS</li>
+                                                      <li>SQL server</li>
                                                 </ul>
                                                 </ul>
                                           </div>
