--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     </div>
                                     <div id="myModal" class="modal">
 
-                                          <span class="close">&times;</span>
+                                          <span class="close" style="color: #fff;">&times;</span>
 
                                           <img class="modal-content" id="img01">
 
